--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,15 @@
-mappings:
+dataChangeTableName: lol
+triggerFormat: SQLASTIC_TR_{{table}}_{{action}}
 
+mappings:
   employees:
     databaseName: employees
     tableName: employees
     indexName: employees
     fieldMappingStrategy: automatic
-
     fields:
       first_name:
         indexType: keyword
-
       salary:
         tableName: salaries
         query: SELECT ...
