--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - elk
 
   web:
-    container_name: sqlastic_web
+    container_name: synclastic_web
     build: .
     ports:
       - 80:80
